# drug-crawler

./: .gitignore  README.md  deepseekv.py  main.py  pyproject.toml
crawler/: config.py  core.py  data_handlers.py  utils.py
drug_data/: drug_data.json
