[project]
name = "drug-crawler"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "beautifulsoup4>=4.13.3",
    "duckdb>=1.2.2",
    "pandas>=2.2.3",
    "requests>=2.32.3",
    "scrapegraphai>=1.46.0",
    "tqdm>=4.67.1",
    "colorama>=0.4.6",
    "duckduckgo-search>=8.0.0",
    "aiofiles>=24.1.0",
    "async-lru>=2.0.5",
    "aiolimiter>=1.2.1",
    "playwright>=1.42.0",
    "asyncio>=3.4.3",
]
